Implement review comments, use virtual threads in test